--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 			</div>
 			<div class="progress-bar-container"><div id="minesweeper-progress"></div></div>
 			<div id="buttonsContainer">
-				<button type="button" class="btn btn-primary justify-content-center align-content-between" id="GameStartButton" onclick="restart()" data-toggle="tooltip" data-placement="top" title="New Game" style="width:60px;margin-right:10px;">
+				<button type="button" class="btn btn-primary justify-content-center align-content-between" id="GameStartButton" onclick="restart()" data-toggle="tooltip" data-placement="bottom" title="New Game" style="width:60px;margin-right:10px;">
 	     			<i class="material-icons mr-1" style="width:100%;vertical-align:middle;margin-top:-3px;">refresh</i>
 	 			</button>
-	 			<button type="button" id="giveUpButton" class="btn btn-primary justify-content-center align-content-between" id="GameStartButton" onclick="giveUp()" data-toggle="tooltip" data-placement="top" title="Give up" style="width:60px;">
+	 			<button type="button" id="giveUpButton" class="btn btn-primary justify-content-center align-content-between" id="GameStartButton" onclick="giveUp()" data-toggle="tooltip" data-placement="bottom" title="Give up" style="width:60px;">
 	     			<span class="fa fa-sad-cry" style="width:100%;vertical-align:middle;margin-top:-3px;font-size:23px;"></span>
 	 			</button>
 			</div>
